--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.1
 	maven_group = com.kasetoatz
-	archives_base_name = RiptideHacks
+	archives_base_name = TridentHacks
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
